<resources>
    <string name="app_name">Catàleg</string>
    <string name="todo">TODO</string>
    <string name="welcome">Benvingut!</string>
    <string name="login">Inicia Sessió</string>
    <string name="email">Correo</string>
    <string name="password">Contrasenya</string>
    <string name="passwordRep">Repeteix contrasenya</string>
    <string name="user">Usuari</string>
    <string name="forgotPassword">Has oblidat la contrasenya?</string>
    <string name="registerIfNoAcc">No tens compte?</string>
    <string name="connect">O connecta amb</string>
    <string name="register">Registra\'t</string>
    <string name="registerBtn">Registrar</string>
    <string name="usernameRequired">Introdueix un nom d\'usuari</string>
    <string name="emailRequired">Introdueix un correu electrònic</string>
    <string name="emailNotValid">Introdueix un correu electrònic vàlid</string>
    <string name="passwordRequired">Introdueix una contrasenya</string>
    <string name="passwordMinLength">La longitud mínima ha de ser de 6 caràcters</string>
    <string name="passwordNotEqual">Les contrasenyes no coincideixen</string>
    <string name="loggedSuccessfully">S\'ha iniciat sessió correctament.</string>
    <string name="wrongEmailPass">Correu electrònic o contrasenya incorrectes</string>
    <string name="registerSuccessful">L\'usuari s\'ha registrat correctament</string>
    <string name="registerFailed">No s\'ha pogut registrar! Torna-ho a provar!</string>
    <string name="passwordConfirm">Confirma contrasenya</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeGeneralScreen">Benvingut a SumaCat, accedeix al nostre contingut i comença a navegar</string>
    <string name="songName">Song name</string>
    <string name="songArtist">Song artist</string>
    <string name="welcomeMusicScreen">Descobreix la música catalana</string>
    <string name="welcomeGameScreen">Descobreix els videojocs en català</string>
    <string name="welcomeMovieScreen">Selecciona una plataforma d\'interés</string>
    <string name="choosePlatform">Escull una plataforma</string>
    <string name="rememberMe">Recorda\'m</string>
    <string name="favourite">T\'agrada</string>
    <string name="moreOfTheArtist">Més de l\'artista</string>
    <string name="listenInYoutube">Escolta-la a Youtube</string>
    <string name="share">Compartir</string>
    <string name="bio">Bio (Opcional)</string>
    <string name="bioMaxLength">La longitud màxima és de 15 caràcters</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="alert_logout_title">Do you want to logout?</string>
    <string name="alert_logout_message">Remember login will be disabled (TODO)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="albumName">Nom de l\'album</string>
    <string name="albumYear">Any ·</string>
    <string name="albumType">Tipus de títol</string>
    <string name="titlesArtist">Més títols en català</string>
    <string name="seriesFragmentName">Series</string>
    <string name="moviesFragmentName">Pel·lícules</string>
    <string name="docsFragmentName">Documentals</string>
    <string name="games">Videojocs</string>
    <string name="category">Categoria</string>
    <string name="action">Acció</string>
    <string name="romance">Romanç</string>
    <string name="comedy">Comèdia</string>
    <string name="drama">Drama</string>
    <string name="thriller">Suspens</string>
    <string name="nature">Naturalesa</string>
    <string name="crime">Crims i misteri</string>
    <string name="technology">Tecnologia</string>
    <string name="health">Salut</string>
    <string name="food">Alimentació</string>
</resources>