<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_music_details"
    tools:context=".Music.MusicDetailsFragment">

    <View
        android:id="@+id/musicDetailsdismissDialogView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/songImage"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/music_bg_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsSongName"
        android:layout_width="412dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/notosanshk_bold"
        android:gravity="center"
        android:text="@string/songName"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songImage" />

    <TextView
        android:id="@+id/detailsSongArtist"
        android:layout_width="412dp"
        android:layout_height="37dp"
        android:fontFamily="@font/notosanshk_bold"
        android:gravity="center"
        android:text="@string/songArtist"
        android:textColor="@color/lightGrey"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsSongName" />

    <ImageView
        android:id="@+id/musicDetailFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="151dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_music_details_heart"
        app:layout_constraintBottom_toTopOf="@+id/musicDetailArtistImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songImage" />

    <ImageView
        android:id="@+id/musicDetailsYoutubeImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/youtube"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicDetailArtistImg" />

    <ImageView
        android:id="@+id/musicDetailsShareImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicDetailsYoutubeImg" />

    <ImageView
        android:id="@+id/musicDetailArtistImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/music_artist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicDetailFavourite" />

    <TextView
        android:id="@+id/musicDetailFavouriteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/notosanshk_bold"
        android:text="@string/favourite"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/musicDetailArtistText"
        app:layout_constraintStart_toEndOf="@+id/musicDetailFavourite"
        app:layout_constraintTop_toBottomOf="@+id/detailsSongArtist" />

    <TextView
        android:id="@+id/musicDetailArtistText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/notosanshk_bold"
        android:text="@string/moreOfTheArtist"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/musicDetailArtistImg"
        app:layout_constraintTop_toBottomOf="@+id/musicDetailFavouriteText" />

    <TextView
        android:id="@+id/musicDetailShareText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/notosanshk_bold"
        android:text="@string/share"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/musicDetailsShareImg"
        app:layout_constraintTop_toBottomOf="@+id/musicDetailYoutubeText" />

    <TextView
        android:id="@+id/musicDetailYoutubeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/notosanshk_bold"
        android:text="@string/listenInYoutube"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/musicDetailsYoutubeImg"
        app:layout_constraintTop_toBottomOf="@+id/musicDetailArtistText" />

    <ImageView
        android:id="@+id/musicDetailPlaceholderImg"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:src="@drawable/cd"
        app:layout_constraintBottom_toBottomOf="@+id/songImage"
        app:layout_constraintEnd_toEndOf="@+id/songImage"
        app:layout_constraintStart_toStartOf="@+id/songImage"
        app:layout_constraintTop_toTopOf="@+id/songImage" />

    <ImageView
        android:id="@+id/musicDetailSeparatorLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:src="@drawable/ic_linia_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicDetailFavourite" />

</androidx.constraintlayout.widget.ConstraintLayout>